@@ -1,3 +1,8 @@
+2008-07-24  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Xml.StateEngine/Parser.cs: Copy the stringbuilder when
+	  cloning the parser.
+
 2008-07-23  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
